# OMEGA-BEAST-V2

./: .gitignore  OMEGA-BEAST-V-INFINITY-2-PRODUCTION 4.sh  README.md  docker-compose.yml  pyproject.toml
src/omega_beast/: __init__.py  agent.py  cli.py  orchestrator.py  security.py
src/omega_beast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_agent.py  test_orchestrator.py  test_security.py
