[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-beast"
version = "2.0.0"
description = "Autonomous agent orchestration framework with security features"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
omega-beast = "omega_beast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
